fixes on scrollbar in content section

--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ section.header {
 
 section.content {
     background-color: var(--screen);/* #fffdfa;*/
-    height: 83%;
+    height: 84%;
     width: 100%;
     overflow-y: auto;
-    padding: 5% 0;    
+    margin: 5% 0;    
 }
 
 .form-container {
@@ -72,7 +72,7 @@ section.content {
     flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
-    height: 100%;
+    height: 85%;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -132,15 +132,17 @@ section.footer {
 .patient-info > div {
     text-align: right;
 }
-.content > div.buttons {
-    text-align: center;
-}
 .complaints-container {
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 3%;
+}
+
+.content > div.complaint-buttons {
+    text-align: center;
+    margin-bottom: 3%;
 }
 .complaints-container .complaint{
     margin: 1.5%;
